<resources>
    <string name="app_name">GameGA</string>
    <string name="Start">Start</string>
    <string name="Instructions">Instructions</string>
    <string name="ReturningPlayer">Returning Player</string>
    <string name="NewPlayer">New Player</string>
    <string name="UserName">Please enter username</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="VerifyPassword">Verify Password</string>
    <string name="Enter">Enter</string>
    <string name="tap_to_start">Tap long press for piki to fly. Be careful from pikies enemys, they have Ash!</string>
    <string name="score">Score Board</string>
    <string name="Our_Story">Our Story</string>
    <string name="GAME_OVER">GAME OVER</string>
    <string name="Shop">Shop</string>
    <string name="LOCKED">LOCKED</string>
    <string name="win_text">You have finished the game Ash is proud of you</string>
    <string name="Back">Back</string>
    <string name="score_game_over">Score :</string>
    <string name="Games_Played">Games Played :</string>
    <string name="Name">Please enter username</string>
    <string name="ok">ok</string>
    <string name="mission_accepted">Mission accepted</string>
    <string name="not_enough_coins">not enough coins</string>
    <string name="money_bag_info">When you buy this product, you will get ten seconds at a slow speed without the enemies, only the coins and lightning</string>
    <string name="part_one_story">There was a lovely Pokemon named Pikachu. Pikachu had a good friend named Ash, who dreams of being the greatest Pokemon trainer of all time.</string>
    <string name="part_two_story">A few hours ago, Pikachu and his friends discovered that Ash was not in his house, after incessant searches they discovered that they had abducted  Ash.</string>
    <string name="part_three_story">Pikachu and his friends did everything to understand where Ash was and who abducted him. Then they found out that it was none other than the nasty gang Toto, the dragon and the head on the floor</string>
    <string name="part_four_story">So hurry, get going! Beware of the enemies and save Ash!</string>
    <string name="back_to_game">back to game</string>
    <string name="one_more_live">Purchasing this product will add more Pokédor (extra life)</string>
    <string name="buy">buy</string>
    <string name="Terasure_box_text">buying this product you will go through one level</string>
    <string name="Paused">Paused</string>
    <string name="Great_Job">Great Job</string>
    <string name="Please_Enter_Name">Please enter userame</string>
</resources>