<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@drawable/background1"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/win_text_view"
        android:textSize="30sp"
        android:text="@string/win_text"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/font4"
        android:gravity="center">
    </TextView>

    <pl.droidsonroids.gif.GifImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:src="@drawable/winer_gif">
    </pl.droidsonroids.gif.GifImageView>


    <EditText
        android:id="@+id/name_et"
        android:layout_width="370dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:textSize="20sp"
        android:layout_marginBottom="30dp"
        android:textColor="@color/black"
        android:fontFamily="@font/font_text"
        android:gravity="center"
        android:textStyle="bold"
        android:maxLines="1"
        android:hint="@string/UserName" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:background="@drawable/menu_buttons"
        android:id="@+id/home_btn"
        android:fontFamily="@font/font4"
        android:text="@string/ok"
        android:textAllCaps="false">
    </Button>

</LinearLayout>