<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="250dp"
    android:layout_height="370dp"
    android:layout_gravity="center"
    android:orientation="horizontal"
    android:background="@color/lightBrightB"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <ImageView
        android:id="@+id/textView"
        android:layout_width="200dp"
        android:layout_height="87dp"
        android:src="@drawable/treasure_box_title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.056"></ImageView>

    <FrameLayout
        android:id="@+id/frameLayout3"
        android:layout_width="210dp"
        android:layout_height="210dp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.303">


        <pl.droidsonroids.gif.GifImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:src="@drawable/monfgc"></pl.droidsonroids.gif.GifImageView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/Terasure_box_text"
            android:textColor="@color/gray"></TextView>

    </FrameLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout3">

        <Button
            android:id="@+id/back4"
            android:layout_width="100dp"
            android:layout_height="37dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/btn_background"
            android:padding="10dp"
            android:text="@string/Back"
            android:textSize="10sp"></Button>

        <Button
            android:id="@+id/buy4"
            android:layout_width="100dp"
            android:layout_height="37dp"
            android:background="@drawable/btn_background"
            android:padding="10dp"
            android:text="@string/buy"
            android:textSize="10sp"></Button>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>